Alignment fix and pointer-event

--- a/web-frontend/src/index.css
+++ b/web-frontend/src/index.css
@@ -21,7 +21,7 @@ code {
   position: relative;
   overflow: hidden;
   height: 100vh;
-  weight: 100vh;
+  width: 100vh;
 }
 
 .canvas {
@@ -213,6 +213,7 @@ code {
   right: 0;
   z-index: 1;
   background-color: transparent;
+  pointer-events: none;
 }
 .login-container{
   z-index: 5;
